:bug: dark mode for button, remove google plus

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -51,10 +51,17 @@ $hr-border-width:             $border-width;
 // Colors
 //
 $text-color:            #000000 !default;
-$background-color:      #f5f5f5;
+$background-color:      #ffffff;
 $dark-text-color:       #b2b9bf !default;
 $dark-background-color: #272c30;
 
+/**
+ * Social
+ */
+$twitter:       #77bcf1;
+$facebook:      #627aac;
+$reddit:        #5f99cf;
+$hacker-news:   #f60;
 
 $white:            #fff;
 $primary:          #42b983;
