--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -1,6 +1,6 @@
 /* LAYOUT CSS */
 .cover {
-  background-color: darken($background-color, 24%);
+  background-color: darken($background-color, 6%);
   position: fixed;
   text-align: center;
   width: 100%;
